--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,8 @@
   --popover: oklch(1 0 0);
   --popover-foreground: oklch(0.15 0 0);
   /* Deep blue primary */
-  --primary: oklch(0.25 0.15 250);
+  /* --primary: oklch(0.25 0.15 250); */
+  --primary: oklch(35.071% 0.04239 260.745);
   --primary-foreground: oklch(0.98 0 0);
   /* Gray secondary */
   --secondary: oklch(0.5 0 0);
@@ -126,4 +127,38 @@
   body {
     @apply bg-background text-foreground;
   }
+}
+
+
+
+
+/* From Uiverse.io by Codewithvinay */ 
+.card {
+
+ border-radius: 15px;
+ background: #ffffff;
+ box-shadow: 20px 20px 60px #bebebe,
+               -20px -20px 60px #ffffff;
+}
+
+@keyframes moveThread {
+  from {
+    stroke-dashoffset: 1000;
+  }
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+.animate-thread {
+  stroke-dasharray: 10;
+  animation: moveThread 12s linear infinite;
+}
+
+.delay-1 {
+  animation-delay: 2s;
+}
+
+.delay-2 {
+  animation-delay: 4s;
 }
